--- a/my-suitcase/package.json
+++ b/my-suitcase/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~9.1.5",
     "@angular/platform-browser-dynamic": "~9.1.5",
     "@angular/router": "~9.1.5",
+    "bootstrap": "^4.4.1",
     "eslint": "^6.8.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^1.11.2",
     "zone.js": "~0.10.3"
