--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "keywords": [],
   "license": "ISC",
   "scripts": {
+    "start": "node src/index.js ",
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
