--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "tslint": "5.11.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
