--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@types/googlemaps": "^3.39.12",
     "bootstrap": "^4.5.0",
     "eslint": "^7.0.0",
     "jquery": "^3.5.1",
