--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /bazel-out
 
 # dependencies
+./node_modules
+./client/node_modules
+client/node_modules
 /client/node_modules
 client/node_modules
 /client/dist
