--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,9 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@popperjs/core": "^2.5.4",
     "@types/googlemaps": "^3.39.12",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.3",
     "eslint": "^7.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
