--- a/client/package.json
+++ b/client/package.json
@@ -26,21 +26,22 @@
     "@types/googlemaps": "^3.39.12",
     "bootstrap": "^4.5.3",
     "eslint": "^7.0.0",
+    "g": "^2.0.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "tslint": "~6.1.0",
+    "tslint": "~6.1.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
+    "@angular/cli": "^11.2.0",
     "@angular/compiler-cli": "~11.0.1",
     "@angular/language-service": "~11.0.1",
-    "@types/node": "~13.13.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~13.13.5",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -51,7 +52,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.1",
-    "tslint": "~6.1.2",
     "typescript": "~4.0.5"
   }
 }
