--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.10",
-    "@angular/cdk": "^12.2.9",
-    "@angular/common": "~12.2.10",
-    "@angular/compiler": "~12.2.10",
-    "@angular/core": "~12.2.10",
-    "@angular/forms": "~12.2.10",
-    "@angular/material": "^12.2.9",
-    "@angular/platform-browser": "~12.2.10",
-    "@angular/platform-browser-dynamic": "~12.2.10",
-    "@angular/router": "~12.2.10",
+    "@angular/animations": "^14.1.1",
+    "@angular/cdk": "^14.1.1",
+    "@angular/common": "^14.1.1",
+    "@angular/compiler": "^14.1.1",
+    "@angular/core": "^14.1.1",
+    "@angular/forms": "^14.1.1",
+    "@angular/material": "^14.1.1",
+    "@angular/platform-browser": "^14.1.1",
+    "@angular/platform-browser-dynamic": "^14.1.1",
+    "@angular/router": "^14.1.1",
     "@popperjs/core": "^2.5.4",
     "@types/googlemaps": "^3.39.12",
     "bootstrap": "^4.5.3",
@@ -35,10 +35,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.10",
-    "@angular/cli": "^12.2.10",
-    "@angular/compiler-cli": "~12.2.10",
-    "@angular/language-service": "~12.2.10",
+    "@angular-devkit/build-angular": "^14.1.1",
+    "@angular/cli": "^14.1.1",
+    "@angular/compiler-cli": "^14.1.1",
+    "@angular/language-service": "^14.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~13.13.5",
@@ -52,6 +52,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   }
 }
