--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,13 @@
     "bson": "^4.0.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-openid-connect": "^1.0.2",
+    "express-openid-connect": "^2.8.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "mongodb": "^3.5.7",
-    "mongoose": "6.0.10",
+    "mongoose": "^6.5.1",
     "nodemon": "^2.0.4"
   }
 }
