--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.1",
-    "@angular/cdk": "^14.1.1",
-    "@angular/common": "^14.1.1",
-    "@angular/compiler": "^14.1.1",
-    "@angular/core": "^14.1.1",
-    "@angular/forms": "^14.1.1",
-    "@angular/material": "^14.1.1",
-    "@angular/platform-browser": "^14.1.1",
-    "@angular/platform-browser-dynamic": "^14.1.1",
-    "@angular/router": "^14.1.1",
+    "@angular/animations": "^14.1.2",
+    "@angular/cdk": "^14.1.2",
+    "@angular/common": "^14.1.2",
+    "@angular/compiler": "^14.1.2",
+    "@angular/core": "^14.1.2",
+    "@angular/forms": "^14.1.2",
+    "@angular/material": "^14.1.2",
+    "@angular/platform-browser": "^14.1.2",
+    "@angular/platform-browser-dynamic": "^14.1.2",
+    "@angular/router": "^14.1.2",
+    "@angular/service-worker": "^14.1.2",
     "@popperjs/core": "^2.5.4",
     "@types/googlemaps": "^3.39.12",
     "bootstrap": "^4.5.3",
@@ -35,10 +36,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.1.1",
-    "@angular/cli": "^14.1.1",
-    "@angular/compiler-cli": "^14.1.1",
-    "@angular/language-service": "^14.1.1",
+    "@angular-devkit/build-angular": "^14.1.2",
+    "@angular/cli": "^14.1.2",
+    "@angular/compiler-cli": "^14.1.2",
+    "@angular/language-service": "^14.1.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~13.13.5",
