--- a/client/ngsw-config.json
+++ b/client/ngsw-config.json
@@ -9,6 +9,7 @@
         "files": [
           "/favicon.ico",
           "/index.html",
+          "/offline.html",
           "/manifest.webmanifest",
           "/*.css",
           "/*.js"
