--- a/client/ngsw-config.json
+++ b/client/ngsw-config.json
@@ -27,5 +27,20 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "cached-user",
+      "urls": [
+        "/api/users/**"
+      ],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "timeout": "5s",
+        "maxAge": "1d",
+        "maxSize": 100
+      },
+      "version": 1
+    }
   ]
 }
