--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@angular/cli": "^14.1.2",
     "@angular/compiler-cli": "^14.1.2",
     "@angular/language-service": "^14.1.2",
+    "@angular/localize": "^14.1.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~13.13.5",
