--- a/client/angular.json
+++ b/client/angular.json
@@ -22,6 +22,12 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "my-suitcase",
+      "i18n": {
+        "locales": {
+          "en": "src/locale/messages.en.xlf",
+          "es": "src/locale/messages.es.xlf"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -81,6 +87,12 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "en": {
+              "localize": ["en"]
+            },
+            "es": {
+              "localize": ["es"]
             }
           },
           "defaultConfiguration": ""
@@ -93,6 +105,12 @@
           "configurations": {
             "production": {
               "browserTarget": "my-suitcase:build:production"
+            },
+            "en": {
+              "browserTarget": "my-suitcase:build:en"
+            },
+            "es": {
+              "browserTarget": "my-suitcase:build:es"
             }
           }
         },
