--- a/client/angular.json
+++ b/client/angular.json
@@ -24,8 +24,8 @@
       "prefix": "my-suitcase",
       "i18n": {
         "locales": {
-          "en": "src/locale/messages.en.xlf",
-          "es": "src/locale/messages.es.xlf"
+          "en-US": "src/locale/messages.en.xlf",
+          "es-ES": "src/locale/messages.es.xlf"
         }
       },
       "architect": {
@@ -89,10 +89,10 @@
               ]
             },
             "en": {
-              "localize": ["en"]
+              "localize": ["en-US"]
             },
             "es": {
-              "localize": ["es"]
+              "localize": ["es-ES"]
             }
           },
           "defaultConfiguration": ""
