--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
     "build": "ng build",
     "translate": "ng extract-i18n --output-path src/locale",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "start-prod": "ng build --configuration=production,es && http-server -c-1 -p 8080 dist/my-suitcase/",
-    "start-es": "ng serve --proxy-config proxy.conf.json --configuration=es",    
+    "start-es": "ng serve --proxy-config proxy.conf.json --configuration=es",
+    "start-prod": "ng build --configuration=production --localize && http-server -c-1 -p 8080 dist/my-suitcase/",
     "test": "ng test",
     "posttest": "node -e 'console.log(\"Testing done!\")'",
     "lint": "ng lint",
