add tool for merging translation to target translation files

--- a/client/angular.json
+++ b/client/angular.json
@@ -115,9 +115,15 @@
           }
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "ng-extract-i18n-merge:ng-extract-i18n-merge",
           "options": {
-            "browserTarget": "my-suitcase:build"
+            "browserTarget": "my-suitcase:build",
+            "format": "xlf",
+            "outputPath": "src/locale",
+            "targetFiles": [
+              "messages.es.xlf",
+              "messages.fr.xlf"
+            ]
           }
         },
         "test": {
