--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build",
-    "translate": "ng extract-i18n --output-path src/locale",
+    "translate": "ng extract-i18n",
     "start": "ng serve --proxy-config proxy.conf.json",
     "start-es": "ng serve --proxy-config proxy.conf.json --configuration=es",
     "start-prod": "ng build --configuration=production --localize && http-server -c-1 -p 8080 dist/my-suitcase/",
@@ -55,6 +55,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-extract-i18n-merge": "^2.2.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.1",
     "typescript": "~4.6.4"
