--- a/client/package.json
+++ b/client/package.json
@@ -59,5 +59,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.10.1",
     "typescript": "~4.6.4"
+  },
+  "engines": {
+    "node": "14.15.0",
+    "npm": "6.14.8"
   }
 }
