--- a/client/package.json
+++ b/client/package.json
@@ -48,20 +48,20 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~13.13.5",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~5.0.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~4.0.2",
+    "karma-jasmine-html-reporter": "1.7.0",
     "ng-extract-i18n-merge": "^2.2.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.1",
-    "typescript": "~4.6.4"
+    "typescript": "~4.9.5"
   },
   "engines": {
-    "node": "14.15.0",
-    "npm": "6.14.8"
+    "node": "16.20.1",
+    "npm": "8.19.4"
   }
 }
