--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,13 +9,14 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2019",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false
   }
 }
