--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-suitcase",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "build": "ng build",
@@ -34,7 +34,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^2.4.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -56,8 +56,9 @@
     "karma-jasmine-html-reporter": "1.7.0",
     "ng-extract-i18n-merge": "^2.2.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.10.1",
-    "typescript": "~4.9.5"
+    "ts-node": "^10.9.1",
+    "tslint": "~6.1.0",
+    "typescript": "4.9.5"
   },
   "engines": {
     "node": "16.20.1",
