--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["googlemaps"]
+    "types": [
+      "googlemaps",
+      "@angular/localize"
+    ]
   },
   "include": [
     "src/**/*.ts"
