--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "description": "my-suitcase-be",
   "version": "1.0.0",
   "main": "src/index.js",
-  "author": "Alejandro Manso & Adrian Aguado",
+  "author": "Alejandro Manso",
   "keywords": [],
   "license": "ISC",
   "scripts": {
@@ -11,17 +11,17 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "bson": "^4.0.4",
+    "bson": "^5.4.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-openid-connect": "^2.8.0",
-    "jsonwebtoken": "^8.5.1",
+    "express": "^4.18.2",
+    "express-openid-connect": "^2.16.0",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "web-push": "^3.5.0"
+    "web-push": "^3.6.3"
   },
   "devDependencies": {
-    "mongodb": "^3.5.7",
-    "mongoose": "^6.5.1",
-    "nodemon": "^2.0.4"
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.2",
+    "nodemon": "^2.0.22"
   }
 }
