upgrade tslint to eslint

--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "start-prod": "ng build --configuration=production --localize && http-server -c-1 -p 8080 dist/my-suitcase/",
     "test": "ng test",
     "posttest": "node -e 'console.log(\"Testing done!\")'",
-    "lint": "ng lint",
+    "lint": "eslint -c .eslintrc.js --ext .ts",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -29,16 +29,20 @@
     "@popperjs/core": "^2.5.4",
     "@types/googlemaps": "^3.39.12",
     "bootstrap": "^4.5.3",
-    "eslint": "^7.0.0",
     "g": "^2.0.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.4.1",
+    "uuid": "^9.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
+    "@angular-eslint/builder": "^16.0.3",
+    "@angular-eslint/eslint-plugin": "^16.0.3",
+    "@angular-eslint/eslint-plugin-template": "^16.0.3",
+    "@angular-eslint/template-parser": "^16.0.3",
     "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "^16.1.4",
     "@angular/language-service": "^16.1.4",
@@ -46,7 +50,13 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~13.13.5",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^46.4.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "~5.0.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
@@ -57,7 +67,6 @@
     "ng-extract-i18n-merge": "^2.2.0",
     "protractor": "~7.0.0",
     "ts-node": "^10.9.1",
-    "tslint": "~6.1.0",
     "typescript": "4.9.5"
   },
   "engines": {
