--- a/client/package.json
+++ b/client/package.json
@@ -26,12 +26,10 @@
     "@angular/platform-browser-dynamic": "^16.1.4",
     "@angular/router": "^16.1.4",
     "@angular/service-worker": "^16.1.4",
-    "@popperjs/core": "^2.5.4",
-    "@types/googlemaps": "^3.39.12",
-    "bootstrap": "^4.5.3",
+    "@types/google.maps": "^3.53.4",
+    "bootstrap": "^5.3.0",
     "g": "^2.0.1",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.4.1",
     "uuid": "^9.0.0",
@@ -52,7 +50,6 @@
     "@types/node": "~13.13.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "codelyzer": "^6.0.0",
     "eslint": "^8.44.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsdoc": "^46.4.3",
