--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "start-prod": "ng build --configuration=production --localize && http-server -c-1 -p 8080 dist/my-suitcase/",
     "test": "ng test",
     "posttest": "node -e 'console.log(\"Testing done!\")'",
-    "lint": "eslint -c .eslintrc.js --ext .ts",
+    "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
-    "@angular-eslint/builder": "^16.0.3",
+    "@angular-eslint/builder": "^15.2.1",
     "@angular-eslint/eslint-plugin": "^16.0.3",
     "@angular-eslint/eslint-plugin-template": "^16.0.3",
     "@angular-eslint/template-parser": "^16.0.3",
@@ -48,12 +48,16 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~13.13.5",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.44.0",
+    "eslint-config-standard-with-typescript": "^36.0.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.57.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsdoc": "^46.4.3",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-promise": "^6.1.1",
     "jasmine-core": "~5.0.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
@@ -63,7 +67,7 @@
     "karma-jasmine-html-reporter": "1.7.0",
     "ng-extract-i18n-merge": "^2.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.5"
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": "16.20.1",
