--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-promise": "^6.1.1",
+    "http-server": "^14.1.1",
     "jasmine-core": "~5.0.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
