--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/forms": "^16.1.4",
     "@angular/localize": "^16.1.5",
     "@angular/material": "^16.1.4",
+    "@angular/material-moment-adapter": "^16.2.0",
     "@angular/platform-browser": "^16.1.4",
     "@angular/platform-browser-dynamic": "^16.1.4",
     "@angular/router": "^16.1.4",
