--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,9 @@
               "src/sw-register.js",
               "src/sw.js",
               "src/pwa-installer.js",
-              "src/manifest.webmanifest"
+              "src/manifest.webmanifest",
+              "src/robots.txt",
+              "src/sitemap.xml"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
