--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,8 @@
               "src/pwa-installer.js",
               "src/manifest.webmanifest",
               "src/robots.txt",
-              "src/sitemap.xml"
+              "src/sitemap.xml",
+              "src/googlef62ba29c6fd47558.html"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
