add redirection for nested routes when they come with a token

--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref":"/",
             "aot": true,
             "outputPath": "dist/my-suitcase",
             "index": "src/index.html",
